syntax = "proto3";

import "error.proto";

package common;

message RpcDescriptor {
  string proto_name = 1;
  string service_name = 2;
  uint32 method_index = 3;
}

message RpcRequest {
  RpcDescriptor descriptor = 1;

  bytes request = 2;
  int32 timeout_ms = 3;
}

message RpcResponse {
  bytes response = 1;
  error.Error error = 2;

  uint64 runtime_us = 3;
}

message RpcPacket {
  uint32 from_peer = 1;
  uint32 to_peer = 2;
  int64 transaction_id = 3;

  RpcDescriptor descriptor = 4;
  bytes body = 5;
  bool is_request = 6;

  uint32 total_pieces = 7;
  uint32 piece_idx = 8;

  int32 trace_id = 9;
}
